[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Maxel31", email = "sorutongenuine.31@gmail.com" }
]
dependencies = [
    "atcoder @ git+https://github.com/not522/ac-library-python",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
